[package]
name = "atpquery-firehoseingester"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
ciborium = "0.2"
cid = { version = "0.10", features = ["serde-codec"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.28"
gcloud-sdk = { version = "0.24", features = ["google-cloud-bigquery-storage-v1"] }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", features = ["http-listener"] }
once_cell = "1"
openssl = { version = "0.10", features = ["vendored"] }
prost = { version = "0.12", features = ["prost-derive"] }
prost-reflect = { version = "0.12", features = ["derive"] }
rs-car = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tonic = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"
prost-reflect-build = "0.12"
