[package]
name = "atpquery-repocrawler"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
atproto-repo = { path = "../atproto-repo" }
atpquery-protos = { path = "../atpquery-protos" }
ciborium = "0.2"
cid = { version = "0.10", features = ["serde-codec"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.28"
gcloud-sdk = { version = "0.24", features = ["google-cloud-bigquery-storage-v1"] }
governor = "0.6"
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", features = ["http-listener"] }
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.12"
prost-reflect = "0.12"
reqwest = { version = "0.11", features = ["stream"] }
rs-car = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tonic = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
